[package]
name = "discord-music-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmake = "0.1.50"
poise = "0.5.7"
reqwest = "0.11.22"
serenity = "0.11.7"
songbird = "0.3.2"
tokio = { version = "1.33.0", features = ["full", "rt-multi-thread"] }
